# elementary.code_macOS

./: .gitignore  README.md  meson.build  meson_options.txt
application/Code.app/Contents/: Info.plist
application/Code.app/Contents/MacOS/: applet
application/Code.app/Contents/Resources/: applet.icns  applet.rsrc
data/: io.elementary.code.gresource.xml  meson.build
data/icons/: Icon.icns  io.elementary.code.icns
meson/: post_install.py  settings.ini
plugins/: meson.build
plugins/editorconfig/: meson.build
schema/: io.elementary.code.appdata.xml
src/: Application.vala  MainWindow.vala  PipeListener.c  granite.h  meson.build
src/FolderManager/: File.vala
src/Services/: Document.vala  FileHandler.vala
subprojects/granite/: meson.build
subprojects/granite/lib/: meson.build
themes/io.elementary.stylesheet.banana/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.blueberry/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.bubblegum/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.cocoa/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.grape/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.lime/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.mint/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.orange/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.slate/gtk-3.0/: gtk-dark.css  gtk.css
themes/io.elementary.stylesheet.strawberry/gtk-3.0/: gtk-dark.css  gtk.css
vapi/: granite.vapi
(+7 files in other folders)
