option ('plugins', type : 'boolean', value : true)
option('have_pkexec', type : 'boolean', value : 'false', description : 'Allow launching with pkexec. Should not be used in FlatPak')
option('documentation', type: 'boolean', value: false, description: 'generate documentation with gtk-doc and valadoc')
option('introspection', type: 'boolean', value: true, description: 'Whether to build introspection files')
